# mtg-deckbuilder

./: .gitignore  DEPLOY.md  HANDOFF.md  MTG_Deckbuilder_Plan.md  README.md  docker-compose.yml
backend/: .dockerignore  .env.example  Dockerfile  fly.toml  pyproject.toml
backend/app/: config.py  db.py  main.py  util.py
backend/app/auth/: deps.py  routes.py  security.py
backend/app/data/: game_changers.json
backend/app/models/: card.py  collection.py  responses.py  user.py
backend/app/repositories/: card_prints.py  cards.py  collection.py  decks.py  users.py
backend/app/routers/: collection.py  commanders.py  decks.py  explore.py  pool.py
backend/app/services/: ai_brief.py  brackets.py  card_prints.py  color_select.py  csv_formats.py  edhrec.py  email.py  external_decks.py  formats.py  generator.py  importer.py  mana_math.py  pool.py  roles.py  scryfall.py  spellbook.py  strategies.py  themes.py
backend/scripts/: capture_commander_golden.py  seed_collection.py  sync_card_prints.py  sync_scryfall.py  sync_spellbook.py
backend/tests/: test_ai_brief.py  test_brackets.py  test_card_prices.py  test_castability.py  test_color_select.py  test_combo_finishers.py  test_commander_golden.py  test_compose.py  test_constructed_gen.py  test_csv_formats.py  test_external_decks.py  test_formats.py  test_image_uris.py  test_locked.py  test_mana_math.py  test_preferences.py  test_printings.py  test_roles.py  test_strategies.py  test_strategy_theme_gen.py  test_themes.py  test_upgrades.py
backend/tests/data/: commander_golden.json
clients/: package-lock.json  (+2 more)
(+91 files in other folders)
